# pdappend

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  init-venv.sh  install-deps.sh  pre-commit.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yaml  ci.yml
pbappend/: cli.py  constants.py  data.py  errors.py  gui.py  pbappend.py
pdappend/: __init__.py  cli.py  config.py  constants.py  dtypes.py  errors.py  gui.py  pdappend.py  utils.py
tests/: .pdappend  __init__.py  f3.csv  f3.xls  f4.xlsx  pdappend.csv  test_commands.py  test_package.py
