[tool.poetry]
name = "pbappend"
version = "0.0.1"
description = "Append csv, xlsx, and xls files."
authors = ["Chris <cnpryer@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cnpryer/pbappend"
documentation = "https://github.com/cnpryer/pbappend/wiki"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
click = "^8.0.4"
polars = "^0.13.16"
polarsbear = {git = "https://github.com/cnpryer/polarsbear", branch="master"}
pandas = "^1.4.1"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
flake8 = "^4.0.1"
wheel = "^0.37.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pbappend = 'pbappend.cli:main'
pbappend-gui = 'pbappend.gui:main'

[tool.black]
line-length = 79
